--- a/imgui.ini
+++ b/imgui.ini
@@ -4,101 +4,58 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1867,807
-Size=437,169
+Pos=1863,881
+Size=400,400
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=397,580
-Size=618,320
+Pos=371,605
+Size=930,295
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Code Editor Window]
+Pos=1303,605
+Size=225,295
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Code Editor Window]
-Pos=1017,580
-Size=477,320
+[Window][Objects List]
+Pos=0,56
+Size=369,844
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Scene Objects List Window]
-Pos=0,56
+[Window][Inspector Window]
+Pos=1530,56
 Size=370,844
 Collapsed=0
-DockId=0x00000003,0
-
-[Window][Inspector Window]
-Pos=1496,56
-Size=404,844
-Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000008,0
 
 [Window][Scene Editor Window]
-Pos=397,56
-Size=1097,522
+Pos=371,56
+Size=1157,547
 Collapsed=0
-DockId=0x00000001,0
-
-[Window][Entities]
-Pos=58,62
-Size=639,561
-Collapsed=0
-
-[Window][Material Node Editor]
-Pos=743,580
-Size=785,320
-Collapsed=0
+DockId=0x00000002,0
 
 [Window][Do you want to quit?]
 Pos=820,417
 Size=370,90
 Collapsed=0
 
-[Window][popup]
-Pos=889,470
-Size=370,143
-Collapsed=0
-
-[Window][Texture Previewer]
+[Window][Entities]
 Pos=60,60
-Size=370,40
+Size=435,506
 Collapsed=0
-
-[Window][Appearance]
-Pos=60,60
-Size=370,228
-Collapsed=0
-
-[Window][Create New Theme]
-Pos=60,60
-Size=423,126
-Collapsed=0
-
-[Window][Another Window]
-Pos=60,60
-Size=400,200
-Collapsed=0
-
-[Window][Yet Another Window]
-Pos=60,60
-Size=400,200
-Collapsed=0
-
-[Window][Objects List]
-Pos=0,56
-Size=395,844
-Collapsed=0
-DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode          ID=0x00000007 Parent=0x8B93E3BD SizeRef=395,844 Selected=0x2C630E19
-  DockNode          ID=0x00000008 Parent=0x8B93E3BD SizeRef=1503,844 Split=X
-    DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1097,844 Split=X
-      DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=370,844 Selected=0x0F5F40DF
-      DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=1114,844 Split=Y
-        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1900,522 Selected=0x44D9F559
-        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1900,320 Split=X
-          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=618,423 Selected=0x1FC0499E
-          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=477,423 CentralNode=1 Selected=0xF2B1FC4A
-    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=404,844 Selected=0xF58E28BB
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,844 Split=X
+    DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=369,844 Selected=0x2C630E19
+    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1529,844 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1900,547 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1900,295 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1528,138 Selected=0x1FC0499E
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=370,138 Selected=0xF2B1FC4A
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=370,844 Selected=0xF58E28BB
 
