Bad Physics Code

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,14 +9,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,605
-Size=930,295
+Pos=371,601
+Size=930,299
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Code Editor Window]
-Pos=1303,605
-Size=225,295
+Pos=1303,601
+Size=225,299
 Collapsed=0
 DockId=0x00000005,0
 
@@ -24,17 +24,17 @@ DockId=0x00000005,0
 Pos=0,56
 Size=369,844
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,0
 
 [Window][Inspector Window]
 Pos=1530,56
 Size=370,844
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,0
 
 [Window][Scene Editor Window]
 Pos=371,56
-Size=1157,547
+Size=1157,543
 Collapsed=0
 DockId=0x00000002,0
 
@@ -50,12 +50,12 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,844 Split=X
-    DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=369,844 Selected=0x2C630E19
-    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1529,844 Split=Y
-      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1900,547 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1900,295 Split=X Selected=0x1FC0499E
-        DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1528,138 Selected=0x1FC0499E
-        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=370,138 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=370,844 Selected=0xF58E28BB
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,983 Selected=0x2C630E19
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1549,983 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=1528,844 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=1900,682 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1900,299 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=930,138 Selected=0x1FC0499E
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=225,138 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=370,844 Selected=0xF58E28BB
 
