--- a/project.json
+++ b/project.json
@@ -1,55 +1,10 @@
 [
     {
         "id": 0,
-        "is_dynamic": true,
-        "mass": 1.0,
-        "material_path": "",
-        "model_path": "project/game/models/cube.obj",
-        "name": "project/game/models/cube",
-        "normal_texture_path": "",
-        "position": {
-            "x": 2.3000001907348633,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "coins collector0",
-        "script_path": "project/game/coins collector.py",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "id": 1,
         "is_dynamic": false,
         "mass": 1.0,
-        "material_path": "",
-        "model_path": "assets/models/tree.obj",
+        "material_path": "project/game/file3.mat",
+        "model_path": "",
         "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
@@ -86,7 +41,7 @@
             },
             "shininess": 0.5
         },
-        "texture_path": "",
+        "texture_path": "project/game/icon.png",
         "type": "entity"
     },
     {
@@ -103,11 +58,11 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 0,
+        "id": 2,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "",
+        "name": "Light",
         "position": {
             "x": 4.0,
             "y": 4.0,
@@ -120,9 +75,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": 5.66354009433468e-25,
-            "y": 4.5912142885138307e-41,
-            "z": 51633413160960.0
+            "x": null,
+            "y": 4.591634678053128e-41,
+            "z": 16973590167552.0
         },
         "type": "light"
     }
