--- a/imgui.ini
+++ b/imgui.ini
@@ -48,6 +48,21 @@ Pos=60,60
 Size=435,506
 Collapsed=0
 
+[Window][Appearance]
+Pos=60,60
+Size=370,228
+Collapsed=0
+
+[Window][Create New Theme]
+Pos=114,530
+Size=616,289
+Collapsed=0
+
+[Window][File Explorer]
+Pos=432,113
+Size=370,489
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,983 Selected=0x2C630E19
