--- a/project.json
+++ b/project.json
@@ -9,7 +9,52 @@
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
+            "y": -3.299999237060547,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0.0,
             "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": -9.642999649047852,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 10.0,
+            "y": 1.0,
+            "z": 10.0
+        },
+        "script_index": "",
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "id": 1,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "material_path": "",
+        "model_path": "project/game/models/tree.obj",
+        "name": "project/game/models/tree",
+        "normal_texture_path": "",
+        "position": {
+            "x": 0.0,
+            "y": 2.3000011444091797,
             "z": 0.0
         },
         "relative_position": {
@@ -24,9 +69,9 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 100.0,
+            "x": 1.0,
             "y": 1.0,
-            "z": 100.0
+            "z": 1.0
         },
         "script_index": "",
         "script_path": "",
@@ -58,7 +103,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 2,
+        "id": 3,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
@@ -75,9 +120,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": 6.383587574016782e-16,
+            "x": 1.5048327167699327e-12,
             "y": 4.5914945482066956e-41,
-            "z": -1.8331227103555469e+25
+            "z": -1.747211232320941e-37
         },
         "type": "light"
     }
