Save/load World Settings

--- a/project.json
+++ b/project.json
@@ -1,16 +1,16 @@
 [
     {
-        "fovy": 126.45982360839844,
+        "fovy": 60.0,
         "position": {
-            "x": 29.324522018432617,
-            "y": 24.64360237121582,
-            "z": 0.349140465259552
+            "x": 50.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "projection": 0,
         "target": {
-            "x": -9.848939895629883,
-            "y": -6.405679702758789,
-            "z": -0.8264021277427673
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "type": "camera",
         "up": {
@@ -18,5 +18,9 @@
             "y": 1.0,
             "z": 0.0
         }
+    },
+    {
+        "bloom": false,
+        "type": "world settings"
     }
 ]
