--- a/imgui.ini
+++ b/imgui.ini
@@ -68,7 +68,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,983 Selected=0x2C630E19
   DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1529,983 Split=X
     DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=1132,844 Split=Y
-      DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=1900,519 CentralNode=1 HiddenTabBar=1 Selected=0x44D9F559
+      DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=1900,519 CentralNode=1 Selected=0x44D9F559
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1900,462 Split=X Selected=0x1FC0499E
         DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=370,138 Selected=0x1FC0499E
         DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=760,138 Selected=0xF2B1FC4A
