--- a/imgui.ini
+++ b/imgui.ini
@@ -63,6 +63,11 @@ Pos=432,113
 Size=370,489
 Collapsed=0
 
+[Window][Texture Previewer]
+Pos=60,60
+Size=370,40
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,983 Selected=0x2C630E19
