--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 5.255995750427246,
-            "y": 2.3690109252929688,
-            "z": 2.4648842811584473
+            "x": 7.51531982421875,
+            "y": 35.531246185302734,
+            "z": -9.203904151916504
         },
         "projection": 0,
         "target": {
-            "x": -44.354042053222656,
-            "y": -3.6166019439697266,
-            "z": 0.7278234958648682
+            "x": 7.113801956176758,
+            "y": -12.510631561279297,
+            "z": 4.646299362182617
         },
         "type": "camera",
         "up": {
@@ -24,15 +24,15 @@
         "type": "world settings"
     },
     {
-        "collider_type": 0,
+        "collider_type": 2523185400,
         "id": 0,
         "is_dynamic": false,
         "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
+        "material_path": "project/game/file3.mat",
+        "mesh_type": 4,
         "model_path": "",
         "name": "Unnamed Entity",
-        "normal_texture_path": "",
+        "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
         "position": {
             "x": 0.0,
             "y": 0.0,
@@ -48,26 +48,26 @@
             "y": 0.0,
             "z": 0.0
         },
-        "roughness_texture_path": "",
+        "roughness_texture_path": "project/game/textures/brick_wall_02_rough_4k.png",
         "scale": {
-            "x": 1.0,
+            "x": 100.0,
             "y": 1.0,
-            "z": 1.0
+            "z": 100.0
         },
-        "script_index": "file10",
-        "script_path": "project/game/file1.py",
+        "script_index": "",
+        "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
+            "DiffuseIntensity": 0.6169999837875366,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.5
+            "shininess": 0.9959999918937683
         },
-        "texture_path": "",
+        "texture_path": "project/game/textures/brick_wall_02_diff_4k.png",
         "type": "entity"
     },
     {
@@ -92,7 +92,7 @@
         "position": {
             "x": 4.0,
             "y": 4.0,
-            "z": 4.0
+            "z": 13.300000190734863
         },
         "relative_position": {
             "x": 0,
