--- a/project.json
+++ b/project.json
@@ -1,16 +1,16 @@
 [
     {
-        "fovy": 70.44170379638672,
+        "fovy": 60.0,
         "position": {
-            "x": -9.310378074645996,
-            "y": 8.540155410766602,
-            "z": 9.431422233581543
+            "x": 18.923053741455078,
+            "y": 27.8728084564209,
+            "z": -27.333202362060547
         },
         "projection": 0,
         "target": {
-            "x": 29.609939575195313,
-            "y": -14.539804458618164,
-            "z": -11.841382026672363
+            "x": 1.0121135711669922,
+            "y": -3.752969741821289,
+            "z": 7.003532409667969
         },
         "type": "camera",
         "up": {
@@ -21,6 +21,7 @@
     },
     {
         "bloom": true,
+        "bloomBrightness": 0.2939999997615814,
         "type": "world settings"
     },
     {
@@ -57,7 +58,7 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.8040000200271606,
+            "DiffuseIntensity": 0.5379999876022339,
             "Roughness": 1.0,
             "SpecularIntensity": 0.0,
             "SpecularTint": {
@@ -68,100 +69,6 @@
             "shininess": 0.0
         },
         "texture_path": "project/game/textures/brick_wall_02_diff_4k.png",
-        "type": "entity"
-    },
-    {
-        "collider_type": 0,
-        "id": 0,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "material_path": "project/game/file3.mat",
-        "mesh_type": 4,
-        "model_path": "",
-        "name": "Unnamed Entity",
-        "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
-        "position": {
-            "x": 37.90006637573242,
-            "y": 16.500003814697266,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 90.0
-        },
-        "roughness_texture_path": "project/game/textures/brick_wall_02_rough_4k.png",
-        "scale": {
-            "x": 100.0,
-            "y": 1.0,
-            "z": 100.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.8040000200271606,
-            "Roughness": 1.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "project/game/textures/brick_wall_02_diff_4k.png",
-        "type": "entity"
-    },
-    {
-        "collider_type": 1,
-        "id": 1,
-        "is_dynamic": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Unnamed Entity",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 9.199999809265137,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "coins collector0",
-        "script_path": "project/game/coins collector.py",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
         "type": "entity"
     },
     {
@@ -178,15 +85,15 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -67438088,
+        "id": 2,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "",
+        "name": "Light",
         "position": {
             "x": 4.0,
             "y": 4.0,
-            "z": 13.300000190734863
+            "z": -0.40000566840171814
         },
         "relative_position": {
             "x": 0,
